--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
         env:
           PORT: 3000
           CI: "true"
+          ENABLE_REDIS: "false"
           GOOGLE_CLIENT_ID: "dummy"
           GOOGLE_CLIENT_SECRET: "dummy"
           MONGO_URI: "mongodb://127.0.0.1:27017/test"
@@ -67,4 +68,5 @@ jobs:
       - name: Run tests
         env:
           CI: "true"
+          ENABLE_REDIS: "false"
         run: npm test
