--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
 
       - name: Wait for server to be ready (max 60s)
         run: |
-          npx wait-on --timeout 60000 http://localhost:3000
+          npx wait-on --timeout 60000 http://localhost:3000/health
 
       - name: Run tests
         env:
