--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,12 @@ jobs:
           cp -f config/dev.js.example config/dev.js
           cp -f config/prod.js.example config/prod.js
           cp -f config/keys.js.example config/keys.js
+          
+      - name: Build client (React)
+        run: |
+          cd client
+          npm install
+          npm run build
 
       - name: Start server
         env:
